data/derived/fa15/progs/unify/prog2277.ml.out
Characters 93-100:
  else returnList @ (["1"]) 
                    ^^^^^^^
Error: This expression has type string list
       This is not a function; it cannot be applied.
